--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.7",
@@ -31,21 +32,31 @@
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
+    "flutterwave-react-native": "^1.0.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.5",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-flutterwave": "^1.0.0",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.16.1",
+    "react-native-html-to-pdf": "^0.12.0",
+    "react-native-pdf-lib": "^1.0.0",
+    "react-native-print": "^0.11.0",
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "3.31.1",
+    "react-native-view-shot": "^4.0.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.12.3",
     "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-html-to-pdf": "^0.8.3",
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
