--- a/app.json
+++ b/app.json
@@ -16,7 +16,8 @@
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.oftotech.educonnect"
     },
     "web": {
       "bundler": "metro",
@@ -27,6 +28,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "64f4bdc6-1c4a-47d3-8bd3-355fb12ffa6d"
+      }
     }
   }
 }
