--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "react-native-view-shot": "^4.0.0",
     "react-native-web": "~0.19.10",
     "react-native-webview": "^13.12.3",
-    "tailwindcss": "^3.3.2"
+    "tailwindcss": "^3.3.2",
+    "expo-dev-client": "~4.0.29"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
